# myDMP

./: CMakeLists.txt  README.md
draw_dmp/: draw.py  res.txt
include/dmp/: dmp.h  function_approx.h  linear_approx.h
nodes/: dmp_server.cpp
src/: dmp.cpp
